exam-la/web-deny-all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-d-all
spec:
  podSelector:
    matchLabels:
      app: web
  ingress: []
